components/MainApp.css
.app, .pc-appMount, .pc-scroller, .pc-resultsGroup, .pc-option, .pc-search, .pc-spriteItem, .pc-autocompleteInner, .pc-autocompleteRowVertical.pc-autocompleteRow,
.pc-emojiItem, .pc-selected, .pc-category, .pc-emojiPicker, .pc-guilds.scroller, .pc-content, .pc-flex, .pc-innerNoAutocomplete, .body-3iLsc4.pc-body,
.pc-popouts.pc-noArrow.pc-noShadow.pc-popout.pc-userPopout.pc-body, .pc-footer, .pc-messagesWrapper, .pc-pickerButtons,
.pc-guildIcon, .pc-popouts, .pc-channelTextArea, .pc-chat,
.pc-textArea.pc-textArea.pc-scrollbarGhostHairline.pc-scroller, .pc-textArea, .pc-scrollbarGhostHairline, .pc-body,
.pc-scrollbarGhostHairline.pc-scrollbar, .quickMessage-2XpSaN.pc-quickMessage, .pc-header.pc-header, .pc-footer.pc-footer,
.pc-header.pc-flex.pc-alignCenter, .pc-textArea, .pc-header, .pc-popouts, .pc-topSectionSpotify, .pc-topSectionSpotify .pc-headerFill,
.pc-topSectionPlaying, .pc-topSectionPlaying .pc-headerFill, .pc-topSectionStreaming, .pc-topSectionStreaming .pc-headerFill {
  background-color: var(--bg-primary);
}

.pc-headerFill, .pc-topSectionXbox, .container-2Thooq, .pc-menu .pc-item:hover {
  background-color: var(--bg-primary) !important;
}

.pc-item, .pc-badge {
  background-color: var(--bg-secondary);
}

.pc-guildSeparator:after, .pc-badge.pc-fixClipping, .pc-members .pc-member .pc-content:hover, .tooltip-black,
.pc-mention .pc-active, .pc-active, .pc-iconSpacing .pc-wrapper, .pc-actionButton, .pc-buttonInvertedPurple {
  background-color: var(--bg-secondary) !important;
}

.pc-listName, .pc-listDiscriminator, .pc-actionButton, .pc-buttonInvertedPurple {
  color: white !important;
}

.pc-unread:before, .pc-wrapper .pc-unread, .pc-barInner {
  background-color: white !important;
}

.scroller-wrap.dark .scroller::-webkit-scrollbar-thumb,
.pc-scrollerWrap .scroller::-webkit-scrollbar-thumb,
.pc-scroller::-webkit-scrollbar-thumb {
  background-color: white !important;
  border-radius: 0 !important;
}

.pc-tabBarContainer, .pc-scrollerWrap .scroller::-webkit-scrollbar-thumb, .pc-scrollerWrap .scroller::-webkit-scrollbar-track-piece {
  border: none
}
.tooltip-black.tooltip-right:after {
  border-right-color: var(--bg-secondary) !important;
}

.tooltip-black.tooltip-left:after {
  border-left-color: var(--bg-secondary) !important;
}

.tooltip.tooltip-black.tooltip-top:after {
  border-top-color: var(--bg-secondary) !important;
}

.pc-separator, .tooltip.tooltip-black.tooltip-bottom:after {
  border-bottom-color: var(--bg-secondary) !important;
}

.pc-activityIconForeground, .pc-activityIcon, .pc-actionIcon, .pc-channelIcon, .pc-iconDefault, .pc-icon, .pc-foreground,
.pc-background, .pc-button, .pc-ownerIcon g path {
  opacity: 1;
  color: white;
  fill: white !important;
}

.pc-listName, .pc-listDiscriminator, .pc-tip {
  opacity: 1 !important;
}

.pc-connectedAccountVerifiedIcon g path[fill*='4f545c'], .pc-verified g path[fill*='4f545c'] {
  fill: var(--bg-secondary) !important;
}

.pc-scrollerWrap .scroller::-webkit-scrollbar-track-piece {
  visibility: hidden !important;
}

.pc-scrollerWrap .scroller::-webkit-scrollbar {
  width: 5px;
}

